# Competitive-Programming

./: README.md
C++/CSES/: CMakeLists.txt  counting_rooms.cpp  labyrinth.cpp  maximum_subarray_sum.cpp  missing_coin_sum.cpp  playlist.cpp  stick_lengths.cpp  sum_of_two_values.cpp
C++/Codeforces/: 1281ASuffixThree.cpp  azamonB.cpp  badpricesB.cpp  beautifulstringA.cpp  berstagramA.cpp  bit++A.cpp  bookreadingC.cpp  cardgameA.cpp  cf1215A.cpp  cf1251B.cpp  cf1251C.cpp  cf1251D.cpp  cf26A.cpp  cf275B.cpp  cf321B.cpp  cf608A.cpp  cf608B.cpp  cf608C.cpp  cf609A.cpp  cf609B.cpp  cf609C.cpp  cf610A.cpp  cf610B.cpp  cf614A.cpp  cf614B.cpp  cf615A.cpp  cf615B.cpp  cf615C.cpp  cf616A.cpp  cf617A.cpp  cf617B.cpp  cf617C.cpp  cf618A.cpp  cf618B.cpp  cf618C.cpp  cf624A.cpp  cf624B.cpp  cf624C.cpp  cf626A.cpp  cf626B.cpp  (+109 more)
C++/Others/: 3-pairdiv.cpp  books.cpp  check_dfs.cpp  lacul.cpp  matrix_exploration.cpp  x-distance.cpp
C++/Others/FMI No Stress 10/: CMakeLists.txt  domenii.cpp  drum7.cpp  loterie.cpp  margiki.cpp  prieteni2.cpp  stv.cpp
C++/VianuArena/: numchar.cpp  paranteze2.cpp  regine.cpp  rucsacfr.cpp  rucsacfr.in
Python (Probleme)/: BFPRT.ipynb  Codeforces Problems.ipynb  For testing.ipynb  Int.ipynb  Repetare test ultimate.ipynb  Tester.ipynb  blea.in
Python (Probleme)/.ipynb_checkpoints/: Codeforces Problems-checkpoint.ipynb  MergeSort-checkpoint.ipynb  Repetare test ultimate-checkpoint.ipynb  Tester-checkpoint.ipynb
Python (Probleme)/AzamonB/: azamonB.py
Python (Probleme)/BerryJamC/: berryjamC.py
algo-tourist/: Rudy358 template.txt
(+340 files in other folders)
